--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "queueless-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "qrcode": "^1.5.3"
   }
 }
