--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+  "start": "node Server.js",
+  "dev": "nodemon Server.js"
+} ,
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
